a11y: Remove extra period in power status accessiblity string.

ChromeVox will read .. literally as two dots. Just use the one period from the .grd file string.

Test: manual
Bug: 747470
Change-Id: Ia5bc2c0a345f1a5b84f4d26bf0141d565f2d1207
Reviewed-on: https://chromium-review.googlesource.com/677567
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504797}
Former-commit-id: cf5561e35209cd63477248e95ba74315f058b7a0